# evaluating-ai-systems

./: .gitignore  README.md  index.html  main.py  pyproject.toml  style.css
DD_cond_and_bayes/: DD_cond_and_bayes_details.md  DD_cond_and_bayes_outline.md  DD_cond_and_bayes_script.md
DD_gaussian_and_CLT/: DD_gaussian_and_CLT_details.md  DD_gaussian_and_CLT_outline.md  DD_gaussian_and_CLT_script.md
datasets/: README.md  cache_datasets.py
datasets/bitext_customer_support/: README.md  data.csv
datasets/goemotions/: README.md  data.csv
datasets/multi_lexsum/: README.md  build_cache.py
datasets/synthetic_itsm/: README.md  data.csv  generate.py
lesson_1/: L1.html  L1_details.md  L1_intro.pptx  L1_outline.md  L1_playground.md  L1_script.md
lesson_1/assets/: l1_spec.json
lesson_1/lab/: L1_sw1_example.ipynb  README.md  build_deck.py  build_l1_full.py  build_l1_slides.py  extract_l1_spec.py  host_health.py  reframe_opening.py  test_host_health.py
lesson_2/: L2.html  L2_details.md  L2_outline.md  L2_playground.md
lesson_3/: L3_details.md  L3_outline.md
lesson_4/: L4_details.md  L4_outline.md  L4_script.md
lesson_5/: L5_details.md  L5_outline.md
lesson_6/: L6_details.md  L6_outline.md
lesson_7/: L7_details.md  L7_outline.md
lesson_8/: L8_details.md  L8_outline.md  L8_script.md
playground/: README.md  index.html  style.css
playground/basic_classification_and_noise/: .env.example  README.md  build_embeddings.py  build_model_js.py  build_predictions.py  index.html  lab.py  notebook.ipynb  run.sh  serve.py  tryit.js
playground/llm_as_a_judge/: lab.py  (+6 more)
(+34 files in other folders)
