[project]
name = "exp-des-private"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.5",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.9",
    "notebook>=7.5.6",
    "openai>=1.0.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
]
